add in memory tests